--- a/Dog-Cat Classification.ipynb
+++ b/Dog-Cat Classification.ipynb
@@ -185,7 +185,7 @@
     }
    ],
    "source": [
-    "training_set = train_datagen.flow_from_directory('Convolutional_Neural_Networks/dataset/training_set',\n",
+    "training_set = train_datagen.flow_from_directory('dataset/training_set',\n",
     "                                                 target_size = (64, 64),\n",
     "                                                 batch_size = 32,\n",
     "                                                 class_mode = 'binary')"
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "test_set = test_datagen.flow_from_directory('Convolutional_Neural_Networks/dataset/test_set',\n",
+    "test_set = test_datagen.flow_from_directory('dataset/test_set',\n",
     "                                            target_size = (64, 64),\n",
     "                                            batch_size = 32,\n",
     "                                            class_mode = 'binary')"
